# uix

./: .gitignore  .piopm  CMakeLists.txt  LICENSE  README.md  fetch_deps.cmd  fetch_uix.cmd  idf_component.yml  library.json  library.properties
docs/: controls.md  index.md  screens.md
examples/benchmark/: platformio.ini  sdkconfig.ttgo-t1-esp-idf
examples/benchmark/include/assets/: architects_daughter.h
examples/benchmark/src/: main.cpp
examples/core2_audio_monitor/: platformio.ini
examples/core2_color_picker/src/: main.cpp
examples/heltek_wifi2_basic/: platformio.ini
examples/heltek_wifi2_basic/src/: main.cpp
examples/lilygo_t5_4_7_basic/: platformio.ini
examples/lilygo_t5_4_7_basic/src/: main.cpp
examples/m5stack_core2_basic/: platformio.ini
examples/m5stack_core2_basic/src/: main.cpp
examples/m5stack_core2_intermediate/: platformio.ini
examples/m5stack_core2_intermediate/include/assets/: architects_daughter.hpp  cpu_pngtree.hpp
examples/m5stack_core2_intermediate/src/: main.cpp
examples/ttgo_basic/: platformio.ini
examples/ttgo_basic/src/: main.cpp
examples/wio_terminal_basic/: platformio.ini
examples/wio_terminal_basic/include/assets/: bee_icon.hpp  telegrama.hpp
examples/wio_terminal_basic/src/: main.cpp
include/: uix.hpp  uix_canvas.hpp  uix_canvas_control.hpp  uix_core.hpp  uix_display.hpp  uix_image.hpp  uix_image_box.hpp  uix_label.hpp  uix_painter.hpp  uix_push_button.hpp  uix_screen.hpp  uix_screen_old.hpp  uix_svg_box.hpp  uix_svg_button.hpp  uix_svg_clock.hpp  uix_svg_slider.hpp  uix_svg_switch.hpp  uix_timer.hpp  uix_vbutton.hpp  uix_vslider.hpp  uix_vswitch.hpp
src/: uix.h  uix.hpp  uix_barcode.hpp  uix_canvas_control.hpp  uix_core.hpp  uix_display.cpp  uix_display.hpp  uix_image.hpp  uix_qrcode.hpp  uix_screen.hpp  uix_timer.cpp  uix_vbutton.hpp  uix_vlabel.hpp  uix_vslider.hpp  uix_vswitch.hpp
src/source/: uix_display.cpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
